--- a/Thesis/Latex/Biblio.bib
+++ b/Thesis/Latex/Biblio.bib
@@ -1,5 +1,12 @@
 %% Saved with string encoding Unicode (UTF-8) 
 
+@misc{pareto2024rag,
+	title     = {The Ultimate Guide to Retrieval-Augmented Generation (RAG)},
+	author    ={ Pareto AI},
+	year      = {2024},
+	url       = {https://pareto.ai/blog/retrieval-augmented-generation},
+	note      = {Accessed: 2025-03-05},
+}
 @manual{murugan2024nlp,
 	title = {Natural Language Processing (NLP)},
 	author = {Mohana Murugan},
@@ -8,7 +15,7 @@
 	doi = {10.13140/RG.2.2.13534.04169}
 } 
 
-@online{techtarget_nlp,
+@misc{techtarget_nlp,
 	author    = {Alexander S. Gillis and Ben Lutkevich and Ed Burn},
 	title     = {Natural Language Processing (NLP)},
 	year      = {2024},
@@ -101,7 +108,7 @@
 	year={2023}
 }
 @article{Naveed2024,
-	author = {Humza Naveed, Asad Ullah Khan, Shi Qiu, Muhammad Saqib, Saeed Anwar, Muhammad Usman, Naveed Akhtar, Nick Barnes, Ajmal Miani},
+	author = {Humza Naveed and Asad Ullah Khan and Shi Qiu and Muhammad Saqib and Saeed Anwar and Muhammad Usmana and Naveed Akhtar and Nick Barnes and  Ajmal Miani},
 	title = {A Comprehensive Overview of Large Language Models},
 	journal = {arXiv preprint arXiv:2307.06435},
 	year = {2024},
@@ -213,3 +220,102 @@
 	url={https://arxiv.org/abs/2409.10102v1},
 	note={Accessed: [add the date you accessed the paper]}
 }
+
+@inproceedings{Rossi_2024,
+    series={CIKM ’24},
+	title={Relevance Filtering for Embedding-based Retrieval},
+	url={http://dx.doi.org/10.1145/3627673.3680095},
+	DOI={10.1145/3627673.3680095},
+	booktitle={Proceedings of the 33rd ACM International Conference on Information and Knowledge Management},
+	publisher={ACM},
+	author={Rossi, Nicholas and Lin, Juexin and Liu, Feng and Yang, Zhen and Lee, Tony and Magnani, Alessandro and Liao, Ciya},
+	year={2024},
+	month=oct, pages={4828–4835},
+	collection={CIKM ’24} }
+
+@misc{geeksforgeeks2022precision,
+	author    = {GeeksforGeeks},
+	title     = {Precision and Recall in Information Retrieval},
+	year      = {2022},
+	url       = {https://www.geeksforgeeks.org/precision-and-recall-in-information-retrieval/},
+	note      = {Accessed: 2025-03-06}
+}
+@misc{deconvoluteai2024metrics,
+	author       = {David Kirchhoff},
+	title        = {Metrics for Evaluation of Retrieval in Retrieval-Augmented Generation},
+	year         = {2024},
+	url          = {https://deconvoluteai.com/blog/rag/metrics-retrieval},
+	note         = {Accessed: 2025-03-06}
+}
+@book{manning2008ir,
+	author    = {Christopher D. Manning and Prabhakar Raghavan and Hinrich Schütze},
+	title     = {Introduction to Information Retrieval},
+	year      = {2008},
+	publisher = {Cambridge University Press},
+	url       = {https://nlp.stanford.edu/IR-book/}
+}
+@misc{evidentlyai2025,
+	author       = {Evidently AI},
+	title        = {Ranking and Recommendation Metrics Guide: Precision and Recall at K in Ranking and Recommendations},
+	year         = {2025},
+	url          = {https://www.evidentlyai.com/ranking-metrics/precision-recall-at-k},
+	note         = {Last updated: January 9, 2025},
+}
+@misc{enwiki:1262179867,
+	author = "{Wikipedia contributors}",
+	title = "Ranking (information retrieval) --- {Wikipedia}{,} The Free Encyclopedia",
+	year = "2024",
+	howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Ranking_(information_retrieval)&oldid=1262179867}",
+	note = {[Online; accessed 7-March-2025]}
+}
+
+@misc{evidentlyai2025,
+	author       = {Evidently AI},
+	title        = {Ranking and Recommendation Metrics Guide: Precision and Recall at K in Ranking and Recommendations},
+	year         = {2025},
+	url          = {https://www.evidentlyai.com/ranking-metrics/precision-recall-at-k},
+	note         = {Last updated: January 9, 2025},
+}
+@inproceedings{salemi2023evaluating,
+	author       = {Alireza Salemi and Hamed Zamani},
+	title        = {Evaluating Retrieval Quality in Retrieval-Augmented Generation},
+	year         = {2023},
+	publisher    = {ACM},
+	address      = {Amherst, MA, United States},
+	url          = {https://dl.acm.org/doi/pdf/10.1145/3626772.3657957},
+	note         = {Accessed via \url{https://dl.acm.org/doi/pdf/10.1145/3626772.3657957?utm_source=chatgpt.com}},
+	institution  = {University of Massachusetts Amherst},
+}
+@misc{wan2025cognitivealigneddocumentselectionretrievalaugmented,
+	title={Cognitive-Aligned Document Selection for Retrieval-augmented Generation}, 
+	author={Bingyu Wan and Fuxi Zhang and Zhongpeng Qi and Jiayi Ding and Jijun Li and Baoshi Fan and Yijia Zhang and Jun Zhang},
+	year={2025},
+	eprint={2502.11770},
+	archivePrefix={arXiv},
+	primaryClass={cs.AI},
+	url={https://arxiv.org/abs/2502.11770}, 
+}
+@inproceedings{freitag-al-onaizan-2017-beam,
+	title = "Beam Search Strategies for Neural Machine Translation",
+	author = "Freitag, Markus  and
+	Al-Onaizan, Yaser",
+	editor = "Luong, Thang  and
+	Birch, Alexandra  and
+	Neubig, Graham  and
+	Finch, Andrew",
+	booktitle = "Proceedings of the First Workshop on Neural Machine Translation",
+	month = aug,
+	year = "2017",
+	address = "Vancouver",
+	publisher = "Association for Computational Linguistics",
+	url = "https://aclanthology.org/W17-3207/",
+	doi = "10.18653/v1/W17-3207",
+	pages = "56--60",}
+	
+	@misc{tensorrt_llm_beam_search,
+		author = {NVIDIA},
+		title = {Best Practices for Tuning the Performance of {TensorRT-LLM} Beam Search},
+		year = {2023},
+		url = {https://tensorrt-llm.continuumlabs.ai/best-practices-for-tuning-the-performance-of-tensorrt-llm/beam-search},
+		note = {[Accessed:  7-March-2025]}
+	}
