--- a/Thesis/Latex/main.tex
+++ b/Thesis/Latex/main.tex
@@ -33,7 +33,6 @@
 \renewcommand{\footrulewidth }{0.3pt}
 \hypersetup{colorlinks, linkcolor=blue,citecolor=red,urlcolor=blue}
 
-\usepackage{arabtex}
 \usepackage{booktabs}
 \DeclareUnicodeCharacter{200B}{}
 
@@ -134,7 +133,7 @@
 	\input{Part_1}
 	\input{Chapter_2}
 	\input{Chapter_3} 
-	%\input{Chapter_4}
+	\input{Chapter_4}
 	%\input{Part_2}
 	%\input{Chapter_5}
 	%\input{Chapter_6}
